# 5day-ai-agents-vibecoding

./: README.md  push.sh
day1/: README.md
day1/src/: App.tsx  data.ts  index.css  types.ts
day1/src/components/: SidebarLeft.tsx  SidebarRight.tsx  TransformerWorkspace.tsx  YoloWorkspace.tsx
day2/: .env.example  README.md  requirements.txt
day2/src/: app.py
day2/src/static/css/: style.css
day2/src/static/js/: main.js
day2/src/templates/: index.html
day3/: README.md
day3/src/: .env.example  agents-cli-manifest.yaml
day3/src/app/: agent.py
day4/: README.md
day4/src/ambient-expense-agent/: Makefile  agents-cli-manifest.yaml  pyproject.toml
day4/src/ambient-expense-agent/app/: agent.py  fast_api_app.py  models.py  security.py
day4/src/ambient-expense-agent/artifacts/eval-results/: grade_results.json
day4/src/ambient-expense-agent/artifacts/traces/: generated_traces.json
day4/src/ambient-expense-agent/tests/eval/: eval_config.yaml  generate_traces.py  grade_traces.py
day4/src/secure-agent-lab/shopping-assistant/: agents-cli-manifest.yaml  threat_model.md
day4/src/secure-agent-lab/shopping-assistant/app/: agent.py
day5/: README.md
day5/src/: deploy.sh
day5/src/expense-agent/: .env.example  Dockerfile  deployment_metadata.json  pyproject.toml
day5/src/expense-agent/app/: agent.py  agent_runtime_app.py
day5/src/expense-agent/tests/eval/datasets/: basic-dataset.json
day5/src/expense-agent/tests/integration/: test_agent.py
day5/src/submission_frontend/: .env.example  Dockerfile  main.py  pyproject.toml
(+2 files in other folders)
