[project]
name = "expense-agent"
version = "0.1.0"
description = "Ambient Expense Agent — ADK 2.0 workflow with auto-approval and HITL"
requires-python = ">=3.11"
dependencies = [
    "google-adk[gcp]>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0",
    "google-cloud-aiplatform[evaluation]>=1.87.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
