[project]
name = "submission-frontend"
version = "1.0.0"
description = "Manager Dashboard — FastAPI frontend for the Ambient Expense Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "google-auth>=2.30.0",
    "google-adk>=2.0.0",
    "google-cloud-aiplatform>=1.87.0",
    "pydantic>=2.0.0",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
